--- a/app/assets/stylesheets/responsive-connections.scss
+++ b/app/assets/stylesheets/responsive-connections.scss
@@ -218,27 +218,6 @@
 			padding-left:20px;
 			padding-bottom: 25px;
 		}
-
-		.myConnWrapper {
-
-			& {
-			    position: relative;
-			    border-bottom:0;
-			}
-
-		    .myConnProfilePic {
-			    position: absolute;
-			    top: 0;
-			    left: 0;
-		    }
-
-		    .myConnInfo {
-		    	
-			    padding-left: 145px;
-			    width: 100%;
-			    padding-right: 0;
-		    }
-		}
 		
 	}
 
